Se modifico el titulo a develop

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Demo Git</title>
 </head>
 <body>
-    <h1>Hello Git Nuevo</h1>
+    <h1>Hello Git Cambios de develop</h1>
 </body>
 </html>
