Se agreco form y button

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Hello Git Cambios de develop</h1>
+    <form action='a' method="get">
+        <input type="button" value="Enviar"></input>
+    </form>
 </body>
 </html>
