--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Hello Git Cambios de develop</h1>
     <form action='a' method="get">
+        <input type="text" name="Name" id="First Name"></input>
         <input type="button" value="Enviar"></input>
     </form>
 </body>
