Se agregot text LastName

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Hello Git Cambios de develop</h1>
     <form action='a' method="get">
         <input type="text" name="Name" id="First Name"></input>
+        <input type="text" name="LastName" id="Last Name"></input>
         <input type="button" value="Enviar"></input>
     </form>
 </body>
