--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <form action='a' method="get">
         <input type="text" name="Name" id="First Name"></input>
         <input type="text" name="LastName" id="Last Name"></input>
+        <input type="Number" name="age" id="age"></input>
         <input type="button" value="Enviar"></input>
     </form>
 </body>
