Se cambio text a texto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello Git Cambios de develop</h1>
     <form action='a' method="get">
-        <input type="text" name="Name" id="First Name"></input>
+        <input type="texto" name="Name" id="First Name"></input>
         <input type="text" name="LastName" id="Last Name"></input>
         <input type="Number" name="age" id="age"></input>
         <input type="button" value="Enviar"></input>
